fix(theme): code highlighting is hard to read (close: #57) (#58)

--- a/packages/vuepress-theme-vt/styles/code-dark.styl
+++ b/packages/vuepress-theme-vt/styles/code-dark.styl
@@ -20,7 +20,6 @@
     }
 
     code, code[class*='language-'], pre[class*='language-'] {
-        background-color: var(--vp-c-bg-soft);
         color: #a6accd;
         font-family: 'Fira Code', 'Fira Mono', Menlo, Consolas, 'DejaVu Sans Mono', monospace;
         direction: ltr;
@@ -28,7 +27,6 @@
         white-space: pre;
         word-spacing: normal;
         word-break: normal;
-        line-height: 1.5;
         -moz-tab-size: 2;
         -o-tab-size: 2;
         tab-size: 2;
