--- a/packages/vuepress-theme-vt/styles/code.styl
+++ b/packages/vuepress-theme-vt/styles/code.styl
@@ -61,7 +61,7 @@ div[class*='language-'] {
     line-height: 1.4;
 
     .highlighted {
-      background-color: rgba(0, 0, 0, 66%);
+      background-color: var(--vp-c-bg-code-highlight)
     }
   }
 
