--- a/packages/vuepress-theme-vt/styles/theme.styl
+++ b/packages/vuepress-theme-vt/styles/theme.styl
@@ -20,6 +20,8 @@
     --vp-c-gray-dark-3: #3a3a3a;
     --vp-c-gray-dark-4: #282828;
     --vp-c-gray-dark-5: #202020;
+    --vp-c-gray-dark-6: #ebebeb;
+    --vp-c-gray-dark-7: #000000;
     --vp-c-divider-light-1: rgba(60, 60, 60, 0.29);
     --vp-c-divider-light-2: rgba(60, 60, 60, 0.12);
     --vp-c-divider-dark-1: rgba(84, 84, 84, 0.65);
@@ -71,6 +73,7 @@
     --vp-c-bg: var(--vp-c-white);
     --vp-c-bg-soft: var(--vp-c-white-soft);
     --vp-c-bg-mute: var(--vp-c-white-mute);
+    --vp-c-bg-code-highlight: var(--vp-c-gray-dark-6);
     --vp-c-divider: var(--vp-c-divider-light-1);
     --vp-c-divider-light: var(--vp-c-divider-light-2);
     --vp-c-divider-inverse: var(--vp-c-divider-dark-1);
@@ -95,6 +98,7 @@
     --vp-c-bg: var(--vp-c-black);
     --vp-c-bg-soft: var(--vp-c-black-soft);
     --vp-c-bg-mute: var(--vp-c-black-mute);
+    --vp-c-bg-code-highlight: var(--vp-c-gray-dark-7);
     --vp-c-divider: var(--vp-c-divider-dark-1);
     --vp-c-divider-light: var(--vp-c-divider-dark-2);
     --vp-c-divider-inverse: var(--vp-c-divider-light-1);
